# information-bundling-auctions

./: README.md  pyproject.toml  requirements.txt
notebooks/: 00_context.ipynb  00_engineering_context.ipynb  README.md
src/: export.py  paths.py
src/benefits_distribution/: context.py
src/information_bundling_auctions/: __init__.py  context.py  export.py  figures.py  paths.py
